// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/index combines other reducers 1`] = `[Function]`;

exports[`reducers/index has a default state 1`] = `
Object {
  "app": Object {
    "isHamburgerMenuExpanded": false,
    "isMapDialogOpened": false,
  },
  "auth": false,
  "request": Object {
    "error": null,
    "pending": 0,
    "statusCode": null,
  },
  "things": Object {
    "loadedThings": Array [],
    "selectedThing": null,
  },
}
`;

exports[`reducers/index reduces nothing 1`] = `
Object {
  "app": Object {
    "isHamburgerMenuExpanded": false,
    "isMapDialogOpened": false,
  },
  "auth": "AUTH",
  "request": "REQUEST",
  "things": Object {
    "loadedThings": Array [],
    "selectedThing": null,
  },
}
`;

exports[`reducers/index reduces other actions 1`] = `
Object {
  "app": Object {
    "isHamburgerMenuExpanded": false,
    "isMapDialogOpened": false,
  },
  "auth": "STATE",
  "request": "REQUEST",
  "things": Object {
    "loadedThings": Array [],
    "selectedThing": null,
  },
}
`;
